Fix the overlap at phone screen sizes
On a small (<480px) screen this now introduces a margin and resets the
width of the title so that it looks better and doesn't overlap.

--- a/app/assets/stylesheets/_metric_group.scss
+++ b/app/assets/stylesheets/_metric_group.scss
@@ -106,6 +106,15 @@
   }
 }
 
+@media (max-width: 480px) {
+  .m-metric-group__expanded {
+    h2 {
+      margin-top: 20px;
+      width: 100%;
+    }
+  }
+}
+
 .m-metric-group__collapsed {
   border: 1px solid #BFC1C3;
   margin-top: -1px;
